# senlin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  Changelog  FEATURES.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  TODO  TODO.rst  bindep.txt  config-generator.conf  install.sh  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  testfile  tox.ini  uninstall.sh
api-ref/ext/: rest_parameters.py
api-ref/source/: actions.inc  build_info.inc  cluster_attrs.inc  cluster_policies.inc  clusters.inc  conf.py  events.inc  index.rst  nodes.inc  parameters.yaml  policies.inc  policy_types.inc  profile_types.inc  profiles.inc  receivers.inc  services.inc  status.yaml  versions.inc  webhooks.inc
contrib/kubernetes/: README.rst  TODO.rst  setup.cfg
contrib/kubernetes/examples/: kubemaster.yaml  kubenode.yaml
contrib/kubernetes/kube/: base.py  master.py  worker.py
contrib/kubernetes/kube/scripts/: master.sh  worker.sh
contrib/vdu/: README.rst  requirements.txt  setup.cfg
contrib/vdu/examples/: vdu.yaml
contrib/vdu/vdu/: server.py
devstack/: README.rst  apache-senlin.template  plugin.sh  settings
devstack/files/: apache-senlin-api.template
devstack/lib/: senlin
doc/: README.rst  requirements.txt
doc/api-site/: pom.xml
doc/docbkx/: README.rst
doc/source/: architecture.rst  authorization.rst  conf.py  configuration.rst  glossary.rst  index.rst  install.rst  overview.rst  webhook.rst
doc/specs/: README.rst  cluster-fast-scaling.rst  container-cluster.rst  fail-fast-on-locked_resource.rst  generic-event.rst  lifecycle-hook.rst  multiple-detection-modes.rst  template.rst  workflow-recover.rst
etc/: policy.json
etc/senlin/: README-senlin.conf.txt  api-paste.ini  policy.json  senlin.conf.sample
examples/policies/: affinity_policy.yaml  batch_policy.yaml  deletion_policy.spec  deletion_policy.yaml  deletion_policy_lifecycle_hook.yaml  health_policy_aws.spec  health_policy_check.spec  health_policy_event.yaml  health_policy_lb.spec  health_policy_poll.yaml  health_policy_poll_url.yaml  lb_policy.yaml  lb_policy_aws.spec  lb_policy_lbaas.spec  placement_policy_rr.spec  placement_policy_weight.spec  placement_region.yaml  placement_rr.yaml  placement_weight.yaml  placement_zone.yaml  scaling_in_policy_ceilometer.yaml  scaling_in_policy_monasca.yaml  scaling_policy.spec  scaling_policy.yaml  scaling_policy_complex.spec  update_policy_1_1_0.spec  update_policy_1_1_0.yaml
examples/profiles/: README.rst  env.yaml  heat_stack_random_string.spec  heat_stack_random_string.yaml  node_stack.yaml  nova_server.spec  nova_server.yaml  random_string_stack.yaml  test_script.sh
examples/triggers/: ceilometer_alarm_agg_metric_threshold.yaml  ceilometer_alarm_agg_resource_threshold.yaml  ceilometer_alarm_combination.yaml  ceilometer_alarm_threshold.yaml  ceilometer_alarm_threshold_resources.yaml
rally-jobs/: README.rst  senlin-senlin.yaml
rally-jobs/plugins/: senlin_plugin.py
releasenotes/notes/: 404-return-code-e3cf3b6fb47a56fe.yaml  abandon-soft-delete-bb739b497ceeecce.yaml  acess-control-admin-project-762c8e91e8875738.yaml  action-filter-status-156542bfcb54e0e5.yaml  action-multi-tenancy-8d2f4e462b3d0c9b.yaml  action-policy-optimization-06ea45eb3dcbe33a.yaml  action-purge-11db5d8018b8389a.yaml  action-status-check-fe5d7ccbc18e317e.yaml  action-update-api-fc51b1582c0b5902.yaml  add-action-filter-40e775a26082f780.yaml  add-availability_zone-option-to-loadbalancer-74b512fb0c138bfe.yaml  affinity-attach-e98079133d46ba78.yaml  affinity-policy-c7dcb2e5fca6354b.yaml  affinity-policy-fix-72ae92dc8ffcff00.yaml  api-endpoint-tenant-ad58b556855e2806.yaml  api-ref-fixes-19bc963430c32ecf.yaml  api-version-ad51ca886fdd606f.yaml  az-info-9344b8d54c0b2665.yaml  batch-scheduling-ca5d98d41fc72973.yaml  bdmv2-fix-b9ff742cdc282087.yaml  bug-1789488-75ee756a53722cd1.yaml  bug-1811161-c6416ad27ab0a2ce.yaml  bug-1811294-262d4b9cced3f505.yaml  bug-1813089-db57e7bdfd3983ac.yaml  bug-1815540-2664a975db5fafc8.yaml  bug-1817379-23dd2c925259d5f2.yaml  bug-1817604-41d4b8f6c6f920e4.yaml  bug-1828856-bf7a30a6eb00238a.yaml  bug-2048099-74f0ca874cfbe6b4.yaml  bug-2048100-6b4156df956a6f14.yaml  bug-2048452-8a690353815601a0.yaml  bug-2048726-a830a7838661a41f.yaml  bug-2049191-8ee2d8352b05cfef.yaml  capacity-calculation-4fd389ff12107dfb.yaml  check-recover-actions-27eef16643b23f47.yaml  check-recover-apis-ea751a9c52736d67.yaml  clean-actions-for-cluster-node-438ca5268e7fd258.yaml  cluster-action-refresh-9eeb60f1f2c1d0abr.yaml  cluster-check-interval-b01e8140cc83760e.yaml  cluster-collect-90e460c7bfede347.yaml  (+273 more)
releasenotes/source/: conf.py  index.rst
senlin/: __init__.py  version.py
senlin/cmd/: __init__.py  api.py  api_wsgi.py  conductor.py  engine.py  health_manager.py  manage.py  status.py
senlin/common/: attr.py  auth_password.py  auth_url.py  config.py  constraints.py  consts.py  context.py  crypto.py  exception.py  i18n.py  identifier.py  messaging.py  param_utils.py  policy.py  profiler.py  scaleutils.py  schema.py  sdk.py  senlin_consts.py  serializers.py  service.py  timeutils.py  trust.py  utils.py  wsgi.py
senlin/conductor/: service.py
senlin/conf/: __init__.py  api.py  authentication.py  base.py  conductor.py  dispatchers.py  engine.py  health_manager.py  notification.py  opts.py  receiver.py  revision.py  zaqar.py
senlin/db/: api.py  api_sim.py  dbapi.py  utils.py
senlin/drivers/: base.py  heat_v1.py  nova_v2.py  sdk.py
senlin/engine/: action.py  cluster.py  cluster_lock.py  cluster_policy.py  dispatcher.py  environment.py  event.py  health_manager.py  member.py  node.py  parser.py  profile_mgr.py  receiver.py  registry.py  scheduler.py  senlin_lock.py  service.py  thread_mgr.py  webhook.py
senlin/events/: base.py  database.py  message.py
senlin/hacking/: checks.py
senlin/rpc/: api.py  (+2 more)
tools/: README  README.rst  config-generator.conf  cover.sh  gen-config  gen-policy  gen_pot  policy-generator.conf  senlin-db-recreate  senlin-db-setup  setup-service
(+1043 files in other folders)
