[metadata]
name = senlin
summary = OpenStack Clustering
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/senlin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    senlin
data_files =
    etc/senlin =
        etc/senlin/api-paste.ini

[entry_points]
console_scripts =
    senlin-api = senlin.cmd.api:main
    senlin-conductor = senlin.cmd.conductor:main
    senlin-engine = senlin.cmd.engine:main
    senlin-health-manager = senlin.cmd.health_manager:main
    senlin-manage = senlin.cmd.manage:main
    senlin-status = senlin.cmd.status:main

wsgi_scripts =
    senlin-wsgi-api = senlin.cmd.api_wsgi:init_app

oslo.config.opts =
    senlin.conf = senlin.conf.opts:list_opts

oslo.config.opts.defaults =
    senlin.conf = senlin.common.config:set_config_defaults

oslo.policy.policies =
    senlin = senlin.common.policies:list_rules

senlin.drivers =
    openstack = senlin.drivers.os
    openstack_test = senlin.tests.drivers.os_test

senlin.profiles =
    os.heat.stack-1.0 = senlin.profiles.os.heat.stack:StackProfile
    os.nova.server-1.0 = senlin.profiles.os.nova.server:ServerProfile
    container.dockerinc.docker-1.0 = senlin.profiles.container.docker:DockerProfile

senlin.policies =
    senlin.policy.deletion-1.0 = senlin.policies.deletion_policy:DeletionPolicy
    senlin.policy.deletion-1.1 = senlin.policies.deletion_policy:DeletionPolicy
    senlin.policy.scaling-1.0 = senlin.policies.scaling_policy:ScalingPolicy
    senlin.policy.health-1.0 = senlin.policies.health_policy:HealthPolicy
    senlin.policy.health-1.1 = senlin.policies.health_policy:HealthPolicy
    senlin.policy.loadbalance-1.0 = senlin.policies.lb_policy:LoadBalancingPolicy
    senlin.policy.loadbalance-1.1 = senlin.policies.lb_policy:LoadBalancingPolicy
    senlin.policy.region_placement-1.0 = senlin.policies.region_placement:RegionPlacementPolicy
    senlin.policy.zone_placement-1.0 = senlin.policies.zone_placement:ZonePlacementPolicy
    senlin.policy.affinity-1.0 = senlin.policies.affinity_policy:AffinityPolicy
    senlin.policy.batch-1.0 = senlin.policies.batch_policy:BatchPolicy

senlin.dispatchers =
    database = senlin.events.database:DBEvent
    message = senlin.events.message:MessageEvent

senlin.endpoints =
    heat = senlin.engine.notifications.heat_endpoint:HeatNotificationEndpoint
    nova = senlin.engine.notifications.nova_endpoint:NovaNotificationEndpoint

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = senlin/locale
domain = senlin

[update_catalog]
domain = senlin
output_dir = senlin/locale
input_file = senlin/locale/senlin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = senlin/locale/senlin.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1
