[metadata]
name = senlin-kubernetes
summary = Kubernetes profile for senlin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/senlin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
senlin.profiles =
    senlin.kubernetes.master-1.0 = kube.master:ServerProfile
    senlin.kubernetes.worker-1.0 = kube.worker:ServerProfile

[global]
setup-hooks =
    pbr.hooks.setup_hook
