[metadata]
name = senlin-vdu
summary = VDU profile for senlin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/senlin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

# [files]
# packages =
#     senlin-vdu

[entry_points]
senlin.profiles =
    os.senlin.vdu-1.0 = vdu.server:ServerProfile

[global]
setup-hooks =
    pbr.hooks.setup_hook
